--- a/.github/workflows/product_builder.yaml
+++ b/.github/workflows/product_builder.yaml
@@ -646,6 +646,9 @@ jobs:
           E2E_NETWORK_NAME=$(docker inspect $E2E_CONTAINER_ID -f '{{range $key, $value := .NetworkSettings.Networks}}{{$key}}{{end}}')
           echo "E2E_NETWORK_NAME: $E2E_NETWORK_NAME"
           echo "e2e_network_name=$E2E_NETWORK_NAME" >> $GITHUB_OUTPUT
+          E2E_NETWORK_GATEWAY=$(docker network inspect $E2E_NETWORK_NAME -f '{{(index .IPAM.Config 0).Gateway}}')
+          echo "E2E_NETWORK_GATEWAY: $E2E_NETWORK_GATEWAY"
+          echo "e2e_network_gateway=$E2E_NETWORK_GATEWAY" >> $GITHUB_OUTPUT
       - name: Setup using cli
         run: |
           docker run -v /var/run/docker.sock:/var/run/docker.sock ${GITHUB_REGISTRY}/${CLI_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} --image-tag ${{ needs.gather_changes.outputs.tag }} --network ${{ steps.get_e2e_network.outputs.e2e_network_name }} --prefer-local-images --expect-container-env --debug -p dyo-e2e up
@@ -660,11 +663,11 @@ jobs:
           # DEBUG: pw:api
           HUB_PROXY_URL: ${{ secrets.HUB_PROXY_URL }}
           HUB_PROXY_TOKEN: ${{ secrets.HUB_PROXY_TOKEN }}
-          E2E_BASE_URL: 'http://${{ steps.get_e2e_network.outputs.e2e_network_name }}_traefik:8000'
-          MAILSLURPER_URL: 'http://${{ steps.get_e2e_network.outputs.e2e_network_name }}_mailslurper:4437'
-          CRUX_UI_URL: 'http://${{ steps.get_e2e_network.outputs.e2e_network_name }}_traefik:8000'
-          KRATOS_URL: 'http://${{ steps.get_e2e_network.outputs.e2e_network_name }}_kratos:4433'
-          KRATOS_ADMIN_URL: 'http://${{ steps.get_e2e_network.outputs.e2e_network_name }}_kratos:4434'
+          E2E_BASE_URL: 'http://${{ steps.get_e2e_network.outputs.e2e_network_gateway }}:8000'
+          MAILSLURPER_URL: 'http://${{ steps.get_e2e_network.outputs.e2e_network_gateway }}:4437'
+          CRUX_UI_URL: 'http://${{ steps.get_e2e_network.outputs.e2e_network_gateway }}:8000'
+          KRATOS_URL: 'http://${{ steps.get_e2e_network.outputs.e2e_network_gateway }}:4433'
+          KRATOS_ADMIN_URL: 'http://${{ steps.get_e2e_network.outputs.e2e_network_gateway }}:4434'
           CI: true
         run: |
           npm ci --include=dev --arch=x64 --cache .npm --prefer-offline --no-fund
