--- a/.github/workflows/product_builder.yaml
+++ b/.github/workflows/product_builder.yaml
@@ -644,6 +644,8 @@ jobs:
         run: |
           E2E_CONTAINER_ID=$(docker ps -q -f label=e2e-${{ github.run_id }}-${{ github.run_attempt }})
           echo "E2E_CONTAINER_ID: $E2E_CONTAINER_ID"
+          E2E_INSPECTION=$(docker inspect $E2E_CONTAINER_ID)
+          echo "E2E_INSPECTION: $E2E_INSPECTION"
           E2E_NETWORK_NAME=$(docker inspect $E2E_CONTAINER_ID -f '{{range $key, $value := .NetworkSettings.Networks}}{{$key}}{{end}}')
           echo "E2E_NETWORK_NAME: $E2E_NETWORK_NAME"
           echo "e2e_network_name=$E2E_NETWORK_NAME" >> $GITHUB_OUTPUT
