--- a/.env.example
+++ b/.env.example
@@ -73,3 +73,12 @@ DISABLE_RECAPTCHA=false
 # It is recommended to use the inivisble type
 RECAPTCHA_SECRET_KEY=Recaptcha_Secret_Key
 RECAPTCHA_SITE_KEY=Recaptcha_Site_Key
+
+# To turn off quality assurance
+# defaults to false
+# TODO (@gerimate): Replace the docs url
+# more info: https://docs.dyrector.io/qa
+# QA_OPT_OUT=true
+
+# For providing a group identifier codename for the collected usage data
+# QA_GROUP_NAME=
