--- a/web/crux/package.json
+++ b/web/crux/package.json
@@ -66,6 +66,7 @@
     "handlebars": "^4.7.8",
     "nestjs-pino": "^3.3.0",
     "nodemailer": "^6.9.4",
+    "octokit": "^3.1.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.2",
