docs: add qa url to .env.example files

--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -59,7 +59,7 @@ RECAPTCHA_SECRET_KEY=<recaptcha_secret_key>
 
 # To turn off quality assurance telemetry
 # defaults to false
-# more info: https://dyrector.io/qa
+# more info: https://docs.dyrector.io/learn-more/quality-assurance-qa
 # QA_OPT_OUT=true
 
 # For providing a group identifier codename for the collected usage data
