--- a/.env.example
+++ b/.env.example
@@ -76,8 +76,7 @@ RECAPTCHA_SITE_KEY=Recaptcha_Site_Key
 
 # To turn off quality assurance
 # defaults to false
-# TODO (@gerimate): Replace the docs url
-# more info: https://docs.dyrector.io/qa
+# more info: https://docs.dyrector.io/learn-more/quality-assurance-qa
 # QA_OPT_OUT=true
 
 # For providing a group identifier codename for the collected usage data
