feat: add encryption for third party credentials

--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -21,8 +21,15 @@ METRICS_API_PORT=1956
 
 # Podman has different alias host.containers.local:5000
 CRUX_AGENT_ADDRESS=localhost:5000
+
 # Signing secret for the generated JWTs
 JWT_SECRET=jwt-secret-token
+
+# Secret key for encrypting stored credentials
+ENCRYPTION_SECRET_KEY=
+
+# The old encryption key used to decrypt existing secrets while rotating keys
+# ENCRYPTION_DEPRECATED_KEY=
 
 # The Docker image tag in the node install script
 # Uncomment to use a different agent version
