--- a/.github/workflows/product_builder.yaml
+++ b/.github/workflows/product_builder.yaml
@@ -367,12 +367,17 @@ jobs:
         run: |
           npx prisma generate
       - name: Running unit tests
-        run: npm run test
+        run: npm run test:cov
       - name: Save NPM caches
         uses: actions/cache/save@v3
         with:
           path: ${{ env.CRUX_WORKING_DIRECTORY }}/.npm/**
           key: ${{ runner.os }}-crux-${{ hashFiles('web/crux/package-lock.json') }}
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./coverage/cobertura-coverage.xml
+          name: crux-coverage
   crux_build:
     runs-on: ubuntu-22.04
     needs: [crux_test, crux_lint, gather_changes]
