--- a/web/crux/package.json
+++ b/web/crux/package.json
@@ -46,6 +46,7 @@
     "@nestjs/common": "^10.1.3",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.1.3",
+    "@nestjs/event-emitter": "^2.0.3",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/microservices": "^10.1.3",
     "@nestjs/passport": "^10.0.0",
