refactor: container log stream tail env var resolution

--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -58,7 +58,7 @@ DISABLE_RECAPTCHA=true
 # Required only when ReCAPTCHA is enabled
 RECAPTCHA_SECRET_KEY=<recaptcha_secret_key>
 
-# Using this number to determine the quantity of logs being returned from the Docker container.
+# Determines the quantity of lines being returned by a Docker container, while streaming its logs
 DEFAULT_CONTAINER_LOG_TAIL=100
 
 # For overriding the node DNS result order
