feat(web): add DEFAULT_CONTAINER_LOG_TAIL to .env (#915)

--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -1,6 +1,6 @@
 NODE_ENV=development
 
-## Development configurations
+# # Development configurations
 
 # Kratos public API
 KRATOS_URL=http://localhost:8000/kratos
@@ -10,7 +10,7 @@ KRATOS_ADMIN_URL=http://localhost:4434
 DATABASE_URL="postgresql://username:password@localhost:5432/crux?schema=public"
 CRUX_UI_URL=http://localhost:8000
 
-## Port settings
+# # Port settings
 
 # Agent gRPC API port
 GRPC_AGENT_PORT=5000
@@ -45,7 +45,7 @@ ENCRYPTION_SECRET_KEY=
 # Example: error contains fatal
 LOG_LEVEL=debug
 
-## Email service config
+# # Email service config
 # SMTP URL for the mailslurper
 SMTP_URI=smtps://test:test@localhost:1025/?skip_ssl_verify=true&legacy_ssl=true
 # E-mail address for dyrector.io invitation links, password resets and others
@@ -53,10 +53,13 @@ FROM_EMAIL=from@example.com
 # E-mail sender name for dyrector.io invitation links, password resets and others
 FROM_NAME=dyrector.io
 
-## Google ReCAPTCHA config
+# Google ReCAPTCHA config
 DISABLE_RECAPTCHA=true
 # Required only when ReCAPTCHA is enabled
 RECAPTCHA_SECRET_KEY=<recaptcha_secret_key>
+
+# Determines the quantity of lines being returned by a Docker container, while streaming its logs
+DEFAULT_CONTAINER_LOG_TAIL=100
 
 # For overriding the node DNS result order
 # regardless of the NODE_ENV value
