--- a/web/crux-ui/Dockerfile
+++ b/web/crux-ui/Dockerfile
@@ -8,8 +8,7 @@ COPY ./package.json ./package-lock.json ./.npm ./
 RUN npm ci --arch=x64 --platform=linuxmusl --cache .npm --prefer-offline --no-fund
 
 COPY . .
-RUN npm run build && \
-    npm prune --production
+RUN npm run build
 
 # stage 2, run the app
 FROM docker.io/library/node:20-alpine3.17 AS RUNNER
@@ -18,20 +17,22 @@ WORKDIR /app
 ENV NODE_ENV production
 ENV NEXT_TELEMETRY_DISABLED 1
 ENV TZ UTC
-RUN apk --update add tzdata
+RUN apk --update add tzdata && \
+    mkdir .next && \
+    chown node:node .next
 
+COPY --from=BUILDER --chown=node:node /app/.next/standalone ./
 COPY --from=BUILDER --chown=node:node /app/public ./public
-COPY --from=BUILDER /app/package.json ./package.json
-COPY --from=BUILDER --chown=node:node /app/.next ./.next
-COPY --from=BUILDER /app/node_modules ./node_modules
+COPY --from=BUILDER --chown=node:node /app/.next/static ./.next/static
 
 USER node
 
 EXPOSE 3000
+ENV HOSTNAME "0.0.0.0"
 ENV PORT 3000
 LABEL org.opencontainers.image.source="https://github.com/dyrector-io/dyrectorio/web/crux-ui"
 
 HEALTHCHECK --interval=30s --timeout=5s \
     CMD wget -nv -t1 --spider http://localhost:3000/ || exit 1
 
-ENTRYPOINT [ "npm", "run", "start:prod"]
+CMD [ "node", "server.js" ]
