--- a/web/crux-ui/package.json
+++ b/web/crux-ui/package.json
@@ -35,7 +35,7 @@
     "clsx": "^2.0.0",
     "formik": "^2.4.3",
     "next": "^14.1.1",
-    "next-translate": "2.5.2",
+    "next-translate": "^2.6.2",
     "openpgp": "^5.10.1",
     "posthog-js": "^1.85.2",
     "prismjs": "^1.29.0",
@@ -45,6 +45,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hot-toast": "^2.4.1",
     "react-simple-code-editor": "^0.13.1",
+    "sharp": "^0.33.2",
     "swr": "^2.2.0",
     "uuid": "^9.0.0",
     "yup": "^1.2.0"
@@ -54,10 +55,10 @@
     "@types/google-protobuf": "^3.15.6",
     "@types/jest": "^29.5.3",
     "@types/jsoneditor": "^9.9.0",
-    "@types/node": "^20.4.6",
+    "@types/node": "20.11.25",
     "@types/openpgp": "^4.4.18",
     "@types/prismjs": "^1.26.0",
-    "@types/react": "^18.2.18",
+    "@types/react": "18.2.64",
     "@types/react-datepicker": "^4.15.0",
     "@types/react-google-recaptcha": "^2.1.5",
     "@types/uuid": "^9.0.2",
@@ -84,6 +85,6 @@
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   }
 }
