fix: crux-ui docker cmd

--- a/web/crux-ui/Dockerfile
+++ b/web/crux-ui/Dockerfile
@@ -35,4 +35,4 @@ LABEL org.opencontainers.image.source="https://github.com/dyrector-io/dyrectorio
 HEALTHCHECK --interval=30s --timeout=5s \
     CMD wget -nv -t1 --spider http://localhost:3000/ || exit 1
 
-CMD [ "node", "server.js" ]
+CMD [ "server.js" ]
