--- a/web/crux-ui/package.json
+++ b/web/crux-ui/package.json
@@ -34,8 +34,8 @@
     "@ory/kratos-client": "^1.1.0",
     "clsx": "^2.0.0",
     "formik": "^2.4.3",
-    "next": "^13.5.4",
-    "next-translate": "2.5.2",
+    "next": "^14.1.1",
+    "next-translate": "^2.6.2",
     "openpgp": "^5.10.1",
     "posthog-js": "^1.85.2",
     "prismjs": "^1.29.0",
@@ -45,19 +45,20 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hot-toast": "^2.4.1",
     "react-simple-code-editor": "^0.13.1",
+    "sharp": "^0.33.2",
     "swr": "^2.2.0",
     "uuid": "^9.0.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.38.0",
+    "@playwright/test": "^1.42.0",
     "@types/google-protobuf": "^3.15.6",
     "@types/jest": "^29.5.3",
     "@types/jsoneditor": "^9.9.0",
-    "@types/node": "^20.4.6",
+    "@types/node": "20.11.25",
     "@types/openpgp": "^4.4.18",
     "@types/prismjs": "^1.26.0",
-    "@types/react": "^18.2.18",
+    "@types/react": "18.2.64",
     "@types/react-datepicker": "^4.15.0",
     "@types/react-google-recaptcha": "^2.1.5",
     "@types/uuid": "^9.0.2",
@@ -77,13 +78,13 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.6.2",
     "next-translate-plugin": "^2.5.2",
-    "playwright": "^1.38.0",
+    "playwright": "^1.42.0",
     "postcss": "^8.4.27",
     "prettier": "^3.0.1",
     "prettier-plugin-organize-imports": "^3.2.3",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   }
 }
