fix: worker function naming

--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -60,7 +60,7 @@ DISABLE_RECAPTCHA=true
 # Required only when ReCAPTCHA is enabled
 RECAPTCHA_SECRET_KEY=<recaptcha_secret_key>
 
-# Determines the maximum quantity of lines returned by a container
+# Determines the maximum quantity of lines returned from a container
 MAX_CONTAINER_LOG_TAKE=1000
 
 # For overriding the node DNS result order
