fix(web): node container log stream sharing (#942)

--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -60,8 +60,8 @@ DISABLE_RECAPTCHA=true
 # Required only when ReCAPTCHA is enabled
 RECAPTCHA_SECRET_KEY=<recaptcha_secret_key>
 
-# Determines the quantity of lines being returned by a Docker container, while streaming its logs
-DEFAULT_CONTAINER_LOG_TAIL=100
+# Determines the maximum quantity of lines returned from a container
+MAX_CONTAINER_LOG_TAKE=1000
 
 # For overriding the node DNS result order
 # regardless of the NODE_ENV value
