--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -63,6 +63,9 @@ RECAPTCHA_SECRET_KEY=<recaptcha_secret_key>
 # Determines the maximum quantity of lines returned from a container
 MAX_CONTAINER_LOG_TAKE=1000
 
+# Determines how much time an agent callback has to execute
+AGENT_CALLBACK_TIMEOUT=5000
+
 # For overriding the node DNS result order
 # regardless of the NODE_ENV value
 # It may be necessary for running the e2e tests,
