feat(crux): add an env to set grpc maxReceiveMessageLength

--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -66,6 +66,10 @@ MAX_CONTAINER_LOG_TAKE=1000
 # Determines how much time an agent callback has to execute
 AGENT_CALLBACK_TIMEOUT=5000
 
+# Maximum accepted message size sent by the agent in bytes
+# defaults to 4 Megabytes
+# MAX_GRPC_RECEIVE_MESSAGE_LENGTH=4194304
+
 # For overriding the node DNS result order
 # regardless of the NODE_ENV value
 # It may be necessary for running the e2e tests,
