--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,7 +1,5 @@
 run:
   timeout: 5m
-  skip-dirs:
-    - internal/cache
 linters-settings:
   depguard:
     rules:
@@ -19,8 +17,9 @@ linters-settings:
   funlen:
     lines: 100
     statements: 50
-  gci:
-    local-prefixes: github.com/golangci/golangci-lint
+  # gci:
+  #   sections:
+  #     - "prefix()"
   goconst:
     min-len: 2
     min-occurrences: 2
@@ -50,22 +49,18 @@ linters-settings:
       - condition
       - return
   govet:
-    check-shadowing: true
+    enable-all: true
   lll:
     line-length: 140
-  maligned:
-    suggest-new: true
   misspell:
     locale: US
   nolintlint:
-    allow-leading-space: true # don't require machine-readable nolint directives (i.e. with no leading space)
     allow-unused: false # report any unused nolint directives
     require-explanation: false # don't require an explanation for nolint directives
     require-specific: false # don't require nolint directives to be specific about which linter is being skipped
   tenv:
     all: true
   staticcheck:
-    go: "1.18"
     checks:
       - all
 linters:
@@ -123,3 +118,5 @@ issues:
     - path: _test\.go
       linters:
         - gomnd
+  exclude-dirs:
+    - internal/cache
