chore(agent): fix dependecies and make linter even more happy

--- a/.github/workflows/builder_image_golang.yaml
+++ b/.github/workflows/builder_image_golang.yaml
@@ -37,7 +37,7 @@ jobs:
   push:
     runs-on: ubuntu-22.04
     needs: build
-    #if: github.ref_name == 'develop'
+    if: github.ref_name == 'develop'
     environment: Workflow - Protected
     steps:
       - name: Artifact download
