--- a/web/crux-ui/package.json
+++ b/web/crux-ui/package.json
@@ -34,6 +34,7 @@
     "@ory/kratos-client": "^1.1.0",
     "clsx": "^2.0.0",
     "formik": "^2.4.3",
+    "js-yaml": "^4.1.0",
     "next": "^14.1.1",
     "next-translate": "^2.6.2",
     "openpgp": "^5.10.1",
@@ -54,6 +55,7 @@
     "@playwright/test": "^1.42.0",
     "@types/google-protobuf": "^3.15.6",
     "@types/jest": "^29.5.3",
+    "@types/js-yaml": "^4.0.9",
     "@types/jsoneditor": "^9.9.0",
     "@types/node": "20.11.25",
     "@types/openpgp": "^4.4.18",
