build: bump proto image version to be in sync with golang

--- a/images/builder-golang/Dockerfile
+++ b/images/builder-golang/Dockerfile
@@ -1,3 +1,4 @@
+# note: update this together with protobuf image
 FROM docker.io/library/golang:1.22-alpine3.19
 
 ENV GOLANGCI_LINT_CACHE $GOPATH/cache
