fix: remove unneded dependency
More info: https://github.com/prisma/prisma/issues/16553

--- a/images/builder-protobuf/Dockerfile
+++ b/images/builder-protobuf/Dockerfile
@@ -15,7 +15,7 @@ RUN mkdir -p $GOPATH/src && \
     mkdir -p $GOPATH/cache && \
     mkdir -p $GOPATH/pkg
 
-RUN apk add nodejs npm alpine-sdk protoc protobuf-dev rsync docker git zstd openssl1.1-compat bash jq
+RUN apk add nodejs npm alpine-sdk protoc protobuf-dev rsync docker git zstd openssl bash jq
 
 RUN npm i -g \
         ts-proto@1.138.0 \
