--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ DOMAIN=example.com
 TIMEZONE=UTC
 # Required for Traefik's certification resolution
 # If there's an issue with the certificate, or when it expires,
-# letsencrypt will send a notificatiom to this e-mail address
+# letsencrypt will send a notification to this e-mail address
 ACME_EMAIL=user@example.com
 # NodeJS services can run in two modes: production and development
 # These are the two values this key can have
