feat: update kratos to 1.12.0

--- a/web/kratos/kratos.template.yaml
+++ b/web/kratos/kratos.template.yaml
@@ -99,6 +99,7 @@ selfservice:
     registration:
       lifespan: 10m
       ui_url: ${CRUX_UI_URL}/auth/registration
+      enable_legacy_one_step: true
       after:
         password:
           hooks:
