fix: add client & server side keepalive

--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -70,6 +70,13 @@ AGENT_CALLBACK_TIMEOUT=5000
 # defaults to 4 Megabytes
 # MAX_GRPC_RECEIVE_MESSAGE_LENGTH=4194304
 
+# GRPC Timeout values and their respective defaults
+# 
+# GRPC_KEEPALIVE_TIMEOUT_MS=5000
+# GRPC_KEEPALIVE_TIME_MS=30000
+# HTTP2_MINPINGINTERVAL_MS=30000
+# HTTP2_MINTIMEBETWEENPINGS_MS=10000
+
 # For overriding the node DNS result order
 # regardless of the NODE_ENV value
 # It may be necessary for running the e2e tests,
